# serializer version: 1
# name: test_get_cluster[all-namespaces]
  '''
  NAMESPACE      NAME           PATH                                      KUSTOMIZATIONS    
  flux-system    flux-system    ./tests/testdata/cluster/clusters/prod    4                 
  
  '''
# ---
# name: test_get_cluster[cluster2]
  '''
  NAME       PATH                       KUSTOMIZATIONS    
  cluster    tests/testdata/cluster2    5                 
  
  '''
# ---
# name: test_get_cluster[cluster3-no-source]
  '''
  NAME           PATH                                           KUSTOMIZATIONS    
  flux-system    ./tests/testdata/cluster3/clusters/cluster3    1                 
  
  '''
# ---
# name: test_get_cluster[cluster3]
  '''
  NAME       PATH                       KUSTOMIZATIONS    
  cluster    tests/testdata/cluster3    2                 
  
  '''
# ---
# name: test_get_cluster[cluster4]
  '''
  NAME       PATH                       KUSTOMIZATIONS    
  cluster    tests/testdata/cluster4    3                 
  
  '''
# ---
# name: test_get_cluster[cluster5]
  '''
  NAME           PATH                                       KUSTOMIZATIONS    
  flux-system    ./tests/testdata/cluster5/clusters/prod    1                 
  
  '''
# ---
# name: test_get_cluster[cluster6]
  '''
  NAME           PATH                                 KUSTOMIZATIONS    
  flux-system    ./tests/testdata/cluster6/cluster    2                 
  
  '''
# ---
# name: test_get_cluster[cluster7]
  '''
  NAME           PATH                                       KUSTOMIZATIONS    
  flux-system    ./tests/testdata/cluster7/clusters/home    3                 
  
  '''
# ---
# name: test_get_cluster[cluster]
  '''
  NAME           PATH                                      KUSTOMIZATIONS    
  flux-system    ./tests/testdata/cluster/clusters/prod    4                 
  
  '''
# ---
# name: test_get_cluster[yaml]
  '''
  ---
  clusters:
  - name: flux-system
    namespace: flux-system
    path: ./tests/testdata/cluster/clusters/prod
    kustomizations:
    - name: apps
      namespace: flux-system
      path: tests/testdata/cluster/apps/prod
      helm_repos: []
      helm_releases:
      - name: podinfo
        namespace: podinfo
        chart:
          name: podinfo
          repo_name: podinfo
          repo_namespace: flux-system
      cluster_policies: []
    - name: flux-system
      namespace: flux-system
      path: tests/testdata/cluster/clusters/prod
      helm_repos: []
      helm_releases: []
      cluster_policies: []
    - name: infra-configs
      namespace: flux-system
      path: tests/testdata/cluster/infrastructure/configs
      helm_repos:
      - name: bitnami
        namespace: flux-system
        url: https://charts.bitnami.com/bitnami
        repo_type: default
      - name: podinfo
        namespace: flux-system
        url: oci://ghcr.io/stefanprodan/charts
        repo_type: oci
      - name: weave-charts
        namespace: flux-system
        url: oci://ghcr.io/weaveworks/charts
        repo_type: oci
      helm_releases: []
      cluster_policies:
      - name: test-allow-policy
        namespace: null
    - name: infra-controllers
      namespace: flux-system
      path: tests/testdata/cluster/infrastructure/controllers
      helm_repos: []
      helm_releases:
      - name: weave-gitops
        namespace: flux-system
        chart:
          name: weave-gitops
          repo_name: weave-charts
          repo_namespace: flux-system
      - name: metallb
        namespace: metallb
        chart:
          name: metallb
          repo_name: bitnami
          repo_namespace: flux-system
      cluster_policies: []
  
  '''
# ---
